--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Government Acting College, Nagpur</title>
   <link rel="stylesheet" href="style.css" />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9VKT9QYYQQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9VKT9QYYQQ');
+</script>
+
+  
 </head>
 <body>
 
@@ -44,3 +55,4 @@
 
 </body>
 </html>
+
